[package]
name = "k_tune"
version = "0.0.1"
authors = ["Botev <botevmg@gmail.com>"]
license = "MIT or Apache-2.0"

[dependencies]
tera = "0.6.2"
rand = "0.3.15"
ocl = { version = "0.12.0", git = "https://github.com/cogciprocate/ocl" }

[lib]
name = "k_tune"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
