[package]
name = "k_tune"
version = "0.0.1"
authors = ["Botev <botevmg@gmail.com>"]
license = "MIT or Apache-2.0"

[dependencies]
rand = "0.3.15"
futures = "0.1"
ocl = { version = "0.12.0", git = "https://github.com/cogciprocate/ocl" }

[dev-dependencies]
clap = "2.22.1"

[lib]
name = "k_tune"
path = "src/lib.rs"
